package ca.mcmaster.se2aa4.island.team103.siteTracking;

import ca.mcmaster.se2aa4.island.team103.history.Coordinate;

public interface PointOfInterest {
	public String id();
	public Coordinate coord();
}
